--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <div class="deposit-part">
             <h3>Deposit
                 <br>
-                <span>
-                    $00
+                $
+                <span id="depositMoney">
+                    00
                 </span>
             </h3>
 
@@ -29,8 +30,9 @@
         <div class="widthdraw-part">
             <h3>widthdraw
                 <br>
+                $
                 <span>
-                    $00
+                    00
                 </span>
             </h3>
 
@@ -39,8 +41,9 @@
         <div class="total-part">
             <h3>Total money
                 <br>
+                $
                 <span>
-                    $00
+                    00
                 </span>
             </h3>
 
@@ -48,6 +51,7 @@
     </div>
 
     <!-- 2nd section -->
+    <!-- diposit -->
     <div class="part-two">
         <div class="deposit-area">
             <h2>Please Deposit</h2>
@@ -55,6 +59,8 @@
             <br>
             <button id="deposit-btn">Deposit</button>
         </div>
+
+        <!-- widthdraw -->
         <div class="widthdraw-area">
             <h2>Please Widthdraw</h2>
             <input id="widthdraw-input" type="text" placeholder="$ amount you want to deposit">
@@ -63,6 +69,10 @@
         </div>
     </div>
 
+
+
+    <!-- js -->
+    <script src="index.js"></script>
 </body>
 
 </html>
