--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>widthdraw
                 <br>
                 $
-                <span>
+                <span id="widthdrawMoney">
                     00
                 </span>
             </h3>
@@ -42,8 +42,8 @@
             <h3>Total money
                 <br>
                 $
-                <span>
-                    00
+                <span id="total-money">
+                    1000
                 </span>
             </h3>
 
